# ZAP-JUnit-converter

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: bandit.yaml  release.yaml  release.yml  semgrep.yaml  tests.yaml
src/zap_junit/: __init__.py
tests/: test_zap_junit.py
